--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "@fontsource/roboto": "^5.0.8",
     "next": "14.0.4",
     "react": "^18",
+    "react-animated-cursor": "^2.11.2",
     "react-dom": "^18",
-    "react-icons": "^4.12.0"
+    "react-icons": "^4.12.0",
+    "react-star-ratings": "^2.3.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.0.1",
