--- a/package.json
+++ b/package.json
@@ -10,11 +10,16 @@
   },
   "dependencies": {
     "@fontsource/roboto": "^5.0.8",
+    "@reduxjs/toolkit": "^2.0.1",
+    "axios": "^1.6.4",
+    "mongoose": "^8.0.3",
     "next": "14.0.4",
     "react": "^18",
     "react-animated-cursor": "^2.11.2",
     "react-dom": "^18",
     "react-icons": "^4.12.0",
+    "react-loading-skeleton": "^3.3.1",
+    "react-redux": "^9.0.4",
     "react-star-ratings": "^2.3.0"
   },
   "devDependencies": {
