--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@fontsource/roboto": "^5.0.8",
     "@reduxjs/toolkit": "^2.0.1",
     "axios": "^1.6.4",
+    "firebase": "^10.7.1",
     "mongoose": "^8.0.3",
     "next": "14.0.4",
     "react": "^18",
