--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "@fontsource/roboto": "^5.0.8",
     "@reduxjs/toolkit": "^2.0.1",
+    "@stripe/react-stripe-js": "^2.4.0",
+    "@stripe/stripe-js": "^2.3.0",
     "axios": "^1.6.4",
     "firebase": "^10.7.1",
     "mongoose": "^8.0.3",
@@ -21,7 +23,8 @@
     "react-icons": "^4.12.0",
     "react-loading-skeleton": "^3.3.1",
     "react-redux": "^9.0.4",
-    "react-star-ratings": "^2.3.0"
+    "react-star-ratings": "^2.3.0",
+    "stripe": "^14.12.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.0.1",
