--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-loading-skeleton": "^3.3.1",
     "react-redux": "^9.0.4",
     "react-star-ratings": "^2.3.0",
+    "react-toastify": "^10.0.4",
     "stripe": "^14.12.0"
   },
   "devDependencies": {
